tests/rosetta/out/Pascal/angle-difference-between-two-bearings-2.pas
// Generated by Mochi compiler v0.10.30 on 1970-01-01T00:00:00Z
program AngleDifferenceBetweenTwoBearings2;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, Classes, Variants;

type
  generic TArray<T> = array of T;
generic function _indexList<T>(arr: specialize TArray<T>; i: integer): T;
begin
  if i < 0 then i := Length(arr) + i;
  if (i < 0) or (i >= Length(arr)) then
    raise Exception.Create('index out of range');
  Result := arr[i];
end;


var
  tc: double;
  testCases: specialize TArray<specialize TArray<double>>;

function angleDiff(b1: double; b2: double): double;
var
  diff: Variant;
begin
  diff := b2 - b1;
  result := diff mod 360 + 360 + 180 mod 360 - 180;
  exit;
end;

begin
  testCases := specialize TArray<specialize TArray<double>>([specialize TArray<double>([20, 45]), specialize TArray<double>([0 - 45, 45]), specialize TArray<double>([0 - 85, 90]), specialize TArray<double>([0 - 95, 90]), specialize TArray<double>([0 - 45, 125]), specialize TArray<double>([0 - 45, 145]), specialize TArray<double>([29.4803, 0 - 88.6381]), specialize TArray<double>([0 - 78.3251, 0 - 159.036]), specialize TArray<double>([0 - 70099.74233810938, 29840.67437876723]), specialize TArray<double>([0 - 165313.6666297357, 33693.9894517456]), specialize TArray<double>([1174.8380510598456, 0 - 154146.66490124757]), specialize TArray<double>([60175.77306795546, 42213.07192354373])]);
  for tc in testCases do
  begin
    writeln(angleDiff(specialize _indexList<double>(tc, 0), specialize _indexList<double>(tc, 1)));
  end;
end.
